--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,6 +30,9 @@ framework:
     assets: ~
     php_errors:
         log: true
+    templating:
+        engines: ['twig']
+        
 
 # Twig Configuration
 twig:
@@ -40,11 +43,11 @@ twig:
 doctrine:
     dbal:
         driver: pdo_mysql
-        host: '%database_host%'
+        host: 'localhost'
         port: '%database_port%'
-        dbname: '%database_name%'
-        user: '%database_user%'
-        password: '%database_password%'
+        dbname: 'symfony'
+        user: 'root'
+        password: 'parola123'
         charset: UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
